--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Folio - Personal Portfolio Template</title>
+  <title>Bryan Linda</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
@@ -104,8 +104,8 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy crafting brand identities, icons, & ilustration work. </p>
-            <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
+            <p class="p-heading">I am a full stack developer based in the Bay Area who has an eye for clean, intuitive, and simple user-facing applications. </p>
+            <p class="separator">At a young age, I've always had a passion for technology, problem-solving, and building cool things. </p>
 
           </div>
 
@@ -154,7 +154,7 @@
 
           </div>
 
-          <div class="services-block">
+          <!-- <div class="services-block">
 
             <i class="ion-ios-analytics-outline"></i>
             <span>Analytics</span>
@@ -168,7 +168,7 @@
             <span>PHOTOGRAPHY</span>
             <p class="separator">To an English person, it will seem like simplified English,told me what </p>
 
-          </div>
+          </div> -->
 
         </div>
 
@@ -183,7 +183,7 @@
 
     <div class="container">
       <div class="section-title text-center">
-        <h2>My Portfolio</h2>
+        <h2>Projects</h2>
       </div>
     </div>
 
@@ -191,54 +191,46 @@
       <div class="row">
         <div class="col-md-12">
 
-          <div class="portfolio-list">
+          <!-- <div class="portfolio-list">
 
-            <ul class="nav list-unstyled" id="portfolio-flters">
+            <!-- <ul class="nav list-unstyled" id="portfolio-flters">
               <li class="filter filter-active" data-filter=".all">all</li>
               <li class="filter" data-filter=".branding">Full Stack</li>
               <li class="filter" data-filter=".mockups">Games</li>
               <!-- <li class="filter" data-filter=".uikits">ui kits</li>
               <li class="filter" data-filter=".webdesign">web design</li>
-              <li class="filter" data-filter=".photography">photography</li> -->
+              <li class="filter" data-filter=".photography">photography</li>
             </ul>
 
-          </div>
+          </div> -->
 
           <div class="portfolio-container">
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
-              <a class="popup-img" href="images/portfolio/1.jpg">
-                <img src="images/portfolio/1.jpg" alt="img">
+              <h2 class='section-title h2'>HEAT</h2>
+              <a class="popup-img" href="images/portfolio/1.gif">
+                <img class='heat' src="images/portfolio/1.gif" alt="alt">
               </a>
+              <div class='project-links'>
+                <a href=""><span>GitHub</span></a>
+                <a href=""><span>Live</span></a>
+              </div>
+              <p>Inspired by GOAT.com, HEAT is a global e-commerce service that allows sneaker enthusiasts to browse through the latest
+              trends, create their own account, as well as make any desired transactions. With the user experience in mind, the
+              front-end structure was designed to provide a simple, yet elegant user-friendly environment.</p>
+              <span>Built with React / Redux, HTML / CSS, Ruby on Rails, Javascript, AWS S3, BCrypt</span>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits photography">
-              <a class="popup-img" href="images/portfolio/2.jpg">
-                <img src="images/portfolio/2.jpg"  alt="img">
+              <a class="popup-img" href="images/portfolio/2.gif">
+                <img src="images/portfolio/2.gif"  alt="img">
               </a>
+              <p></p>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding webdesig photographyn">
               <a class="popup-img" href="images/portfolio/3.jpg">
                 <img src="images/portfolio/3.jpg" alt="img">
-              </a>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups webdesign photography">
-              <a class="popup-img" href="images/portfolio/4.jpg">
-                <img src="images/portfolio/4.jpg" alt="img">
-              </a>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
-              <a class="popup-img" href="images/portfolio/5.jpg">
-                <img src="images/portfolio/5.jpg" alt="img">
-              </a>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
-              <a class="popup-img" href="images/portfolio/6.jpg">
-                <img src="images/portfolio/6.jpg" alt="img">
               </a>
             </div>
 
