--- a/index.html
+++ b/index.html
@@ -76,12 +76,9 @@
         <p>Software Engineer, Frontend Developer, Full Stack Developer</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
-          <li><a href="#"><i class="ion-social-github"></i></a></li>
-          <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-          <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
-          <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/bryan-linda/"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://github.com/blindaa121"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://angel.co/u/bryan-linda"><i class="fab fa-angellist"></i></a></li>
         </ul>
       </div>
     </div>
@@ -213,9 +210,9 @@
                 <img id='heat' class='heat' src="images/portfolio/1.jpg" alt="alt">
               </a>
               <div class='project-links'>
-                <span><a href="">GitHub</a></span>
+                <span><a href="https://github.com/blindaa121/heatinup">GitHub</a></span>
                 <span>|</span>
-                <a href=""><span>Live</span></a>
+                <a href="https://heat-check.herokuapp.com/#/"><span>Live</span></a>
               </div>
               <p>Inspired by GOAT.com, HEAT is a global e-commerce service that allows sneaker enthusiasts to browse through the latest
               trends, create their own account, as well as make any desired transactions. With the user experience in mind, the
@@ -229,14 +226,12 @@
                 <img id='itype'src="images/portfolio/2.jpg"  alt="img">
               </a>
               <div class='project-links'>
-                <span><a href="">GitHub</a></span>
+                <span><a href="https://github.com/blindaa121/iType">GitHub</a></span>
                 <span>|</span>
-                <a href=""><span>Live</span></a>
+                <a href="https://blindaa121.github.io/iType/"><span>Live</span></a>
               </div>
-              <p>Inspired by GOAT.com, HEAT is a global e-commerce service that allows sneaker enthusiasts to browse through the latest
-              trends, create their own account, as well as make any desired transactions. With the user experience in mind, the
-              front-end structure was designed to provide a simple, yet elegant user-friendly environment.</p>
-              <span>Built with React / Redux, HTML / CSS, Ruby on Rails, Javascript, AWS S3, BCrypt</span>
+              <p>iType is a fun and interactive exercise that allows players to practice their typing speed and accuracy.</p>
+              <span>Built with Vanilla JavaScript, HTML / CSS, Random Word API</span>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding webdesig photographyn">
@@ -245,14 +240,14 @@
                 <img id='huddleup'src="images/portfolio/3.jpg" alt="img">
               </a>
               <div class='project-links'>
-                <span><a href="">GitHub</a></span>
+                <span><a href="https://github.com/jmiggs/huddleUP">GitHub</a></span>
                 <span>|</span>
-                <a href=""><span>Live</span></a>
+                <a href="https://huddleups.herokuapp.com/#/"><span>Live</span></a>
               </div>
-              <p>Inspired by GOAT.com, HEAT is a global e-commerce service that allows sneaker enthusiasts to browse through the latest
-              trends, create their own account, as well as make any desired transactions. With the user experience in mind, the
-              front-end structure was designed to provide a simple, yet elegant user-friendly environment.</p>
-              <span>Built with React / Redux, HTML / CSS, Ruby on Rails, Javascript, AWS S3, BCrypt</span>
+                <p>huddleUP, developed by a talented group of software engineers, is a full-stack web application that allows users to
+                  host
+                  and join local sporting events.</p>
+                <span>Built with React / Redux, HTML / CSS, MongoDB, Express.js, Node.js, Google Maps API</span>   
             </div>
 
           </div>
@@ -360,8 +355,9 @@
               <h2 class="mb-30">GET IN TOUCH</h2>
 
               <ul class="contact-details">
-                <li><i class='ion-ios-telephone'></i><span>510-306-8879</span></li>
-                <li><i class='ion-email'></i><a href="mailto:blindaa121@gmail.com">blindaa121@gmail.com</a></li>
+                <li><i class='ion-ios-telephone'></i><span> 510-306-8879</span></li>
+                <br/>
+                <li><i class='ion-email'></i><a href="mailto:blindaa121@gmail.com"> blindaa121@gmail.com</a></li>
               </ul>
             
             </div>
@@ -427,9 +423,9 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
-          <li><a href="#"><i class="ion-social-github"></i></a></li>
-          <li><a href=""><i class="fab fa-angellist"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/bryan-linda/"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://github.com/blindaa121"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://angel.co/u/bryan-linda"><i class="fab fa-angellist"></i></a></li>
         </ul>
 
       </div>
