--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="css/responsive.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="shortcut icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/320/apple/237/personal-computer_1f4bb.png">
   <script src="https://kit.fontawesome.com/41494d0a90.js" crossorigin="anonymous"></script>
 
   <!-- =======================================================
@@ -102,7 +102,7 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">I am a full stack developer based in the Bay Area who has an eye for clean, intuitive, and simple user-facing applications. </p>
+            <p class="p-heading">I am a frontend developer based in the Bay Area who has an eye for clean, intuitive, and simple user-facing applications. </p>
             <p class="separator">At a young age, I've always had a passion for technology, problem-solving, and building cool things. When I'm not coding away to 90's R&B music, I enjoy spending quality time with my loved ones, keeping up with the latest
             technologies, discovering new music, going on food adventures with my significant other, and exploring new hobbies and interests.
             
