--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="header-content">
         <h1>I'm<span class="typed"></span></h1>
         <p>Software Engineer, Frontend Developer, Full Stack Developer</p>
-
+        <h1><a class='resume' href="./resume/Bryan_Linda_Resume.pdf">Resume</a></h1>
         <ul class="list-unstyled list-social">
           <li><a href="https://www.linkedin.com/in/bryan-linda/"><i class="ion-social-linkedin"></i></a></li>
           <li><a href="https://github.com/blindaa121"><i class="ion-social-github"></i></a></li>
