--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <img class='ruby' src="images/skills/ruby.png" alt="">
         <img class='rails' src="images/skills/rails.png" alt="">
         <img class='react'src="images/skills/react.jpg" alt="">
-        <img class='redux'src="images/skills/redux.png" alt="">
+        <img class='redux'src="images/skills/redux1.png" alt="">
         <img class='javascript'src="images/skills/javascript.png" alt="">
         <img class='css'src="images/skills/css.png" alt="">
         <img class='html'src="images/skills/html.png" alt="">
