Change background image and profile pic

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="col-lg-4 ">
           <div class="div-img-bg">
             <div class="about-img">
-              <img src="images/me.jpg" class="img-responsive" alt="me">
+              <img src="images/HEADSHOT1.jpg" class="img-responsive" alt="me">
             </div>
           </div>
         </div>
@@ -105,7 +105,6 @@
             <p class="p-heading">I am a frontend developer based in the Bay Area who has an eye for clean, intuitive, and simple user-facing applications. </p>
             <p class="separator">At a young age, I've always had a passion for technology, problem-solving, and building cool things. When I'm not coding away to 90's R&B music, I enjoy spending quality time with my loved ones, keeping up with the latest
             technologies, discovering new music, going on food adventures with my significant other, and exploring new hobbies and interests.
-            
             </p>
 
           </div>
