--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
   <link rel="shortcut icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/320/apple/237/personal-computer_1f4bb.png">
   <script src="https://kit.fontawesome.com/41494d0a90.js" crossorigin="anonymous"></script>
 
+  <!-- Meta Properties -->
+  <meta property='og:title' content='Portfolio' />
+  <meta property='og:image' content='./images/meta.jpg' />
+  <meta property='og:url' content='https://bryanlinda.com/' />
   <!-- =======================================================
     Theme Name: Folio
     Theme URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
