Update resume and use target _blank for links

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
       <div class="header-content">
         <h1>I'm<span class="typed"></span></h1>
         <p>Software Engineer, Frontend Developer, Full Stack Developer</p>
-        <h1><a class='resume' href="./resume/Bryan_Linda_Resume.pdf">Resume</a></h1>
+        <h1><a class='resume' target="_blank" href="./resume/Bryan_Linda_Resume.pdf">Resume</a></h1>
         <ul class="list-unstyled list-social">
-          <li><a href="https://www.linkedin.com/in/bryan-linda/"><i class="ion-social-linkedin"></i></a></li>
-          <li><a href="https://github.com/blindaa121"><i class="ion-social-github"></i></a></li>
-          <li><a href="https://angel.co/u/bryan-linda"><i class="fab fa-angellist"></i></a></li>
+          <li><a target="_blank" href="https://www.linkedin.com/in/bryan-linda/"><i class="ion-social-linkedin"></i></a></li>
+          <li><a target="_blank"href="https://github.com/blindaa121"><i class="ion-social-github"></i></a></li>
+          <li><a target="_blank"href="https://angel.co/u/bryan-linda"><i class="fab fa-angellist"></i></a></li>
         </ul>
       </div>
     </div>
@@ -214,9 +214,9 @@
                 <img id='heat' class='heat' src="images/portfolio/1.jpg" alt="alt">
               </a>
               <div class='project-links'>
-                <span><a href="https://github.com/blindaa121/heatinup">GitHub</a></span>
+                <span><a target="_blank"href="https://github.com/blindaa121/heatinup">GitHub</a></span>
                 <span>|</span>
-                <a href="https://heat-check.herokuapp.com/#/"><span>Live</span></a>
+                <a target="_blank"href="https://heat-check.herokuapp.com/#/"><span>Live</span></a>
               </div>
               <p>Inspired by GOAT.com, HEAT is a global e-commerce service that allows sneaker enthusiasts to browse through the latest
               trends, create their own account, as well as make any desired transactions. With the user experience in mind, the
@@ -230,9 +230,9 @@
                 <img id='itype'src="images/portfolio/2.jpg"  alt="img">
               </a>
               <div class='project-links'>
-                <span><a href="https://github.com/blindaa121/iType">GitHub</a></span>
+                <span><a target="_blank" href="https://github.com/blindaa121/iType">GitHub</a></span>
                 <span>|</span>
-                <a href="https://blindaa121.github.io/iType/"><span>Live</span></a>
+                <a target="_blank" href="https://blindaa121.github.io/iType/"><span>Live</span></a>
               </div>
               <p>iType is a fun and interactive exercise that allows players to practice their typing speed and accuracy.</p>
               <span>Built with Vanilla JavaScript, HTML / CSS, Random Word API</span>
@@ -244,9 +244,9 @@
                 <img id='huddleup'src="images/portfolio/3.jpg" alt="img">
               </a>
               <div class='project-links'>
-                <span><a href="https://github.com/jmiggs/huddleUP">GitHub</a></span>
+                <span><a target="_blank" href="https://github.com/jmiggs/huddleUP">GitHub</a></span>
                 <span>|</span>
-                <a href="https://huddleups.herokuapp.com/#/"><span>Live</span></a>
+                <a target="_blank" href="https://huddleups.herokuapp.com/#/"><span>Live</span></a>
               </div>
                 <p>huddleUP, developed by a talented group of software engineers, is a full-stack web application that allows users to
                   host
